--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <form role="form">
             <div class="form-group">
               <label>Add Magnet single/multiple</label>
-              <textarea class="form-control" placeholder="add magnets here" rows="16"></textarea>
+              <textarea class="form-control" placeholder="add magnets here" rows="16" autofocus></textarea>
             </div>
             <div class="form-group">
               <button type="submit" class="btn btn-lg btn-default center-block">
@@ -89,7 +89,7 @@
         <div class="col-md-8">
           <form class="form-inline">
             <div class="checkbox">
-              <span>Forever </span><input type="checkbox" ng-model="forever">
+              <span>Forever </span><input type="checkbox" ng-model="forever" ng-click="checkForever()">
             </div>
             <div class="form-group">
               <select ng-model="cooldown">
