--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         <!-- login form -->
         <form class="navbar-form navbar-right" name="loginForm" role="login" ng-submit="loginMe()" ng-show="loginStatus === 'anon'">
           <div class="form-group">
-            <label for="username">Login</label>
+            <label for="username" class="label label-danger blink" ng-show="loginFailed">Login failed</label>
+            <label for="username" ng-hide="loginFailed">Login</label>
             <input type="text" class="form-control" ng-model="login.username" name="username" placeholder="Username" autofocus>
           </div>
           <div class="form-group">
